# hottoe

./: AUTHORS  README.md  meson.build
data/: com.github.gandalfn.pantheon-sound-control.appdata.xml.in  com.github.gandalfn.pantheon-sound-control.desktop.in  com.github.gandalfn.suka-hottoe  com.github.gandalfn.suka-hottoe.appdata.xml.in  com.github.gandalfn.suka-hottoe.desktop.in  com.github.gandalfn.suka-hottoe.gschema.xml  com.gitlab.mithrandirn.hottoe.appdata.xml.in  com.gitlab.mithrandirn.hottoe.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
gstreamer/: meson.build
gstreamer/src/: Message.vala  Slice.vala  SliceDouble.vala  SliceFloat.vala  SliceS16.vala  SliceS24.vala  SliceS32.vala  Spectrum.vala  plugin.c
lib/: Channel.vala  Client.vala  Device.vala  Direction.vala  Equalizer.vala  Manager.vala  Monitor.vala  Plug.vala  Port.vala  Profile.vala  Spectrum.vala  meson.build
lib/PulseAudio/: Channel.vala  Client.vala  Device.vala  Equalizer.vala  InputChannel.vala  InputPlug.vala  Manager.vala  Module.vala  Monitor.vala  Operations.vala  OutputChannel.vala  OutputPlug.vala  Plug.vala  Port.vala  Profile.vala  Spectrum.vala  meson.build
po/: POTFILES  com.gitlab.mithrandirn.hottoe.pot  fr.po  hottoe.pot  meson.build  pantheon-sound-control.pot  ru.mo  ru.po  suka-hottoe.pot
src/: Indicator.vala  SwitchboardPlug.vala  meson.build
src/Services/: DesktopNotification.vala  EqualizerManager.vala  Notification.vala  SoundNotification.vala
src/Settings/: Equalizer.vala  Main.vala
src/Widgets/: ChannelRadioButton.vala  ChannelView.vala  ClientIcon.vala  ClientList.vala  ClientView.vala  DeviceChannelList.vala  DeviceIcon.vala  DeviceList.vala  DeviceSettingsList.vala  DeviceSettingsListRow.vala  DeviceSettingsPage.vala  DeviceSettingsView.vala  DeviceView.vala  DisplayWidget.vala  Equalizer.vala  Icon.vala  IndicatorIcon.vala  IndicatorView.vala  MainView.vala  MaxWidthLabel.vala  PlugChannelList.vala  PlugChooser.vala  PlugChooserRow.vala  PlugSettingsList.vala  PlugSettingsRow.vala  PortIcon.vala  PresetList.vala  Spectrum.vala  VolumeMeter.vala  VuMeter.vala
test/: TestEqualizer.vala  TestManager.vala  TestSpectrum.vala  meson.build
vapi/: gstreamer-1.0.vapi  gstreamer-audio-1.0.vapi  gstreamer-base-1.0.vapi  gstreamer-fft-1.0.vapi  libpulse.vapi
